# server/api/router.go
@@ -1,12 +1,0 @@
-package api
-
-import (
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
-)
-
-func ApplyRoutes(r *gin.Engine) {
-	r.GET("/ping", PingExample)
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-}
